--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,8 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Không tìm thấy trang"
+excerpt: "Không tìm thấy trang. Vui lòng kiểm tra lại URL."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Xin lỗi, nhưng trang bạn đang cố xem không tồn tại.
