--- a/_posts/2017-08-18-1543.md
+++ b/_posts/2017-08-18-1543.md
@@ -8,7 +8,7 @@ categories:
 
 **Chi phí tạo Website WordPress** là yếu tố đầu tiên mọi khách hàng quan tâm khi liên hệ với các dịch vụ thiết kế website hay freelancer. Đôi khi câu trả lời là vài chục $, thỉnh thoảng lên đến cả nghìn $, và cũng có thể là 0 đồng với cùng VHW (coming soon!).
 
-[![Các thành phần góp phần tạo Website WordPress chuyên nghiệp](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-chuyC3AAn-nghiE1BB87p-2017-big.jpg)](https://vuihocweb.com/tuts/xay-dung-mot-wordpress-website-chuyen-nghiep)
+![Các thành phần góp phần tạo Website WordPress chuyên nghiệp](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-chuyC3AAn-nghiE1BB87p-2017-big.jpg)
 
 Các thành phần của [WP Website chuyên nghiệp](https://vuihocweb.com/tuts/xay-dung-mot-wordpress-website-chuyen-nghiep) 2017
 
@@ -34,7 +34,7 @@ Do vậy, trong các gợi ý chi phí cho từng loại Website bên dưới, V
 
 ## 1Personal Blog, Portfolios/ Showcase hay Landing
 
-[![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-Blog-nhC6B0-ngocdenroi.com_-696x373-2.png)](https://vuihocweb.com/wp-content/uploads/2017/03/Chi-ph%C3%AD-x%C3%A2y-d%E1%BB%B1ng-Website-WordPress-d%E1%BA%A1ng-Blog-nh%C6%B0-ngocdenroi.com_.png)
+![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-Blog-nhC6B0-ngocdenroi.com_-696x373-2.png)
 
 Blog cá nhân như [ngocdenroi.com](https://ngocdenroi.com/) của Nguyễn Anh Ngọc
 
@@ -83,7 +83,7 @@ Với các website nhỏ, chỉ cần dùng Dịch vụ miễn phí :
 
 ## 2Agency – Business/ Company Website
 
-[![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-DE1BB8Bch-vE1BBA5-Business-nhC6B0-ftech.vn_-696x326.png)](https://vuihocweb.com/wp-content/uploads/2017/03/Chi-ph%C3%AD-x%C3%A2y-d%E1%BB%B1ng-Website-WordPress-d%E1%BA%A1ng-D%E1%BB%8Bch-v%E1%BB%A5-Business-nh%C6%B0-ftech.vn_.png)
+![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-DE1BB8Bch-vE1BBA5-Business-nhC6B0-ftech.vn_-696x326.png)
 
 Website công ty, dịch vụ như [ftech.vn](https://ftech.vn/)
 
@@ -145,7 +145,7 @@ Dịch vụ trả tiền khuyên dùng:
 
 ## 3Trang Tin tức, Chia sẻ , Adsense, Tiếp thị Liên kết
 
-[![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-Trang-tin-nhC6B0-trungduc.net_-696x328.png)](https://vuihocweb.com/wp-content/uploads/2017/03/Chi-ph%C3%AD-x%C3%A2y-d%E1%BB%B1ng-Website-WordPress-d%E1%BA%A1ng-Trang-tin-nh%C6%B0-trungduc.net_.png)
+![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-Trang-tin-nhC6B0-trungduc.net_-696x328.png)
 
 Trang tin tức, chia sẻ dùng Newspaper Theme của anh Trung Đức ‘ đẹp choai’ [trungduc.net](https://trungduc.net/)
 
@@ -221,7 +221,7 @@ Các dịch vụ Trả tiền với giải pháp tiết kiệm:
 
 ## 4Shop bán hàng – WooCommerce Website
 
-[![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-shop-WooCommerce-nhC6B0-aodaihanh.com_-696x320.png)](https://vuihocweb.com/wp-content/uploads/2017/03/Chi-ph%C3%AD-x%C3%A2y-d%E1%BB%B1ng-Website-WordPress-d%E1%BA%A1ng-shop-WooCommerce-nh%C6%B0-aodaihanh.com_.png)
+![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-Website-WordPress-dE1BAA1ng-shop-WooCommerce-nhC6B0-aodaihanh.com_-696x320.png)
 
 Shop bán hàng tuyệt đẹp Áo Dài Hạnh [(aodaihanh.com](https://aodaihanh.com/)). Anh chị nào thích mặc áo dài đừng bỏ qua nhé!
 
@@ -294,7 +294,7 @@ Các dịch vụ Trả tiền với giải pháp tiết kiệm:
 
 ## 5Bonus: Chi phí Xây dựng vuihocweb.com là bao nhiêu?
 
-[![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-VHW-vuihocweb.com-lC3A0-bao-nhiC3AAu-696x316.png)](http://sofsog.com/wp-content/uploads/2017/08/Chi-phC3AD-xC3A2y-dE1BBB1ng-VHW-vuihocweb.com-lC3A0-bao-nhiC3AAu.png)
+![](/assets/images/Chi-phC3AD-xC3A2y-dE1BBB1ng-VHW-vuihocweb.com-lC3A0-bao-nhiC3AAu-696x316.png)
 
 Blog của Quỳnh ‘dễ thương’ VHW (vuihocweb.com)
 
