--- a/_posts/2017-08-18-1543.md
+++ b/_posts/2017-08-18-1543.md
@@ -1,4 +1,5 @@
 ---
+published: False
 title: "Chi phí tạo Website WordPress chuyên nghiệp năm 2017 (bị nhầm link)"
 date: "2017-08-18"
 categories: 
