--- a/_posts/2016-10-01-373.md
+++ b/_posts/2016-10-01-373.md
@@ -9,7 +9,8 @@ tags:
   - "wordpress"
   - "wordpress-co-ban"
 header:
-  image: /assets/images/advanced1.jpg
+  overlay_image: /assets/images/advanced1.jpg
+  caption: "Nguồn ảnh: [**sofsog**](https://sofsog.com)" 
   teaser: /assets/images/advanced1.jpg
 toc: true
 breadcrumbs: true
